--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ logging:
 spring:
   datasource:
     url:  jdbc:h2:file:./h2/org2
+#  url: jdbc:h2:mem:test
   jpa:
     hibernate:
       ddl-auto: update
